--- a/style.css
+++ b/style.css
@@ -6,6 +6,5 @@ font-family: 'Times New Roman', Times, serif;
 .container{
     width: 100%;
     height: 100%;
-    background: #E0218A;
-
+    background-color: #E0218A;
 }
