--- a/style.css
+++ b/style.css
@@ -7,4 +7,5 @@ font-family: 'Times New Roman', Times, serif;
     width: 100%;
     height: 100%;
     background-color: #E0218A;
+    background: #e768ae;
 }
