--- a/style.css
+++ b/style.css
@@ -6,5 +6,5 @@ font-family: 'Times New Roman', Times, serif;
 .container{
     width: 100%;
     height: 100%;
-    background: #e768ae;
+    background-color: #e768ae;
 }
