--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@ margin: 0;
 padding: 0;
 font-family: 'Times New Roman', Times, serif;
 }
-.container{
-    width: 100%;
-    height: 100%;
-    color: #e768ae;
+.text{
+    top: 25%;
+    left: 25%;
+    color: white;
+
 }
