--- a/style.css
+++ b/style.css
@@ -7,5 +7,5 @@ font-family: 'Times New Roman', Times, serif;
     top: 25%;
     left: 25%;
     color: white;
-
+    background-color: blueviolet;
 }
