--- a/style.css
+++ b/style.css
@@ -8,5 +8,5 @@ font-family: 'Times New Roman', Times, serif;
     left: 25%;
     color: white;
     background-color: blueviolet;
-    position: absolute;
+    position: relative;
 }
