--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ font-family: 'Times New Roman', Times, serif;
 }
 .text{
     top: 25%;
+    bottom: 25%;
     left: 25%;
     color: white;
     background-color: blueviolet;
