--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
     }
     .text{
         top: 25%;
         bottom: 25%;
         left: 25%;
+        right: 25%;
         color: white;
-        background-color: blueviolet;
+        background-color: rgb(0, 0, 0);
         position: relative;
     }
