--- a/style.css
+++ b/style.css
@@ -1,14 +1,12 @@
 *{
-    margin: 0;
-    padding: 0;
+    margin: 1;
+    padding: 1;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
     }
     .text{
-        top: 25%;
-        bottom: 25%;
-        left: 25%;
-        right: 25%;
+        top: 50%;
+        left: 10%;
         color: white;
         background-color: rgb(0, 0, 0);
-        position: relative;
+        position: absolute;
     }
