--- a/style.css
+++ b/style.css
@@ -1,12 +1,42 @@
 *{
-    margin: 1;
-    padding: 1;
+    margin: 0;
+    padding: 0;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
     }
     .text{
-        top: 50%;
-        left: 10%;
+        top: 0%;
+        left: 0%;
         color: white;
         background-color: rgb(0, 0, 0);
         position: absolute;
+    }
+    .buttonStyle{
+        background-color: #ffb9ef;
+        border: none;
+        color: white;
+        padding: 100px 200px;
+        top: 25%;
+        left: 25%;
+        position: absolute;
+        text-align: left;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 72px;
+        margin: 0 0;
+        cursor: pointer;
+    }
+    .upgradeStyle{
+        background-color: #ffb9ef;
+        border: none;
+        color: white;
+        padding: 10px 20px;
+        top: 8%;
+        left: 2%;
+        position: absolute;
+        text-align: left;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 8px;
+        margin: 0 0;
+        cursor: pointer;
     }
