--- a/style.css
+++ b/style.css
@@ -40,3 +40,33 @@
         margin: 0 0;
         cursor: pointer;
     }
+    .upgradeStyle2{
+        background-color: #ffb9ef;
+        border: none;
+        color: white;
+        padding: 10px 20px;
+        top: 14%;
+        left: 2%;
+        position: absolute;
+        text-align: left;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 8px;
+        margin: 0 0;
+        cursor: pointer;
+    }
+    .upgradeStyle3{
+        background-color: #ffb9ef;
+        border: none;
+        color: white;
+        padding: 10px 20px;
+        top: 20%;
+        left: 2%;
+        position: absolute;
+        text-align: left;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 8px;
+        margin: 0 0;
+        cursor: pointer;
+    }
