--- a/style.css
+++ b/style.css
@@ -1,72 +1,93 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
-    }
-    .text{
-        top: 0%;
-        left: 0%;
-        color: white;
-        background-color: rgb(0, 0, 0);
-        position: absolute;
-    }
-    .buttonStyle{
-        background-color: #ffb9ef;
-        border: none;
-        color: white;
-        padding: 100px 200px;
-        top: 25%;
-        left: 25%;
-        position: absolute;
-        text-align: left;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 72px;
-        margin: 0 0;
-        cursor: pointer;
-    }
-    .upgradeStyle{
-        background-color: #ffb9ef;
-        border: none;
-        color: white;
-        padding: 10px 20px;
-        top: 8%;
-        left: 2%;
-        position: absolute;
-        text-align: left;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 8px;
-        margin: 0 0;
-        cursor: pointer;
-    }
-    .upgradeStyle2{
-        background-color: #ffb9ef;
-        border: none;
-        color: white;
-        padding: 10px 20px;
-        top: 14%;
-        left: 2%;
-        position: absolute;
-        text-align: left;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 8px;
-        margin: 0 0;
-        cursor: pointer;
-    }
-    .upgradeStyle3{
-        background-color: #ffb9ef;
-        border: none;
-        color: white;
-        padding: 10px 20px;
-        top: 20%;
-        left: 2%;
-        position: absolute;
-        text-align: left;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 8px;
-        margin: 0 0;
-        cursor: pointer;
-    }
+}
+
+.text {
+    top: 0%;
+    left: 0%;
+    color: white;
+    background-color: rgb(0, 0, 0);
+    position: absolute;
+}
+
+.buttonStyle {
+    background-color: #ffb9ef;
+    border: none;
+    color: white;
+    padding: 100px 200px;
+    top: 25%;
+    left: 25%;
+    position: absolute;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 72px;
+    margin: 0 0;
+    cursor: pointer;
+}
+
+.upgradeStyle {
+    background-color: #ffb9ef;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    top: 8%;
+    left: 2%;
+    position: absolute;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 8px;
+    margin: 0 0;
+    cursor: pointer;
+}
+
+.upgradeStyle2 {
+    background-color: #ffb9ef;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    top: 14%;
+    left: 2%;
+    position: absolute;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 8px;
+    margin: 0 0;
+    cursor: pointer;
+}
+
+.upgradeStyle3 {
+    background-color: #ffb9ef;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    top: 20%;
+    left: 2%;
+    position: absolute;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 8px;
+    margin: 0 0;
+    cursor: pointer;
+}
+
+.errorMessage {
+    background-color: #ff0000;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    top: 20%;
+    left: 80%;
+    position: absolute;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 8px;
+    margin: 0 0;
+    cursor: pointer;
+}
