--- a/style.css
+++ b/style.css
@@ -7,13 +7,14 @@
 .text {
     top: 0%;
     left: 0%;
-    color: white;
+    color: #022b3b;
     background-color: rgb(0, 0, 0);
+    font-size: 50px;
     position: absolute;
 }
 
 .buttonStyle {
-    background-color: #ffb9ef;
+    background-color: #00bd74;
     border: none;
     color: white;
     padding: 100px 200px;
@@ -23,17 +24,17 @@
     text-align: left;
     text-decoration: none;
     display: inline-block;
-    font-size: 72px;
+    font-size: 150px;
     margin: 0 0;
     cursor: pointer;
 }
 
 .upgradeStyle {
-    background-color: #ffb9ef;
+    background-color: #025951;
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 8%;
+    top: 28%;
     left: 2%;
     position: absolute;
     text-align: left;
@@ -45,11 +46,11 @@
 }
 
 .upgradeStyle2 {
-    background-color: #ffb9ef;
+    background-color: #047a6f;
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 16%;
+    top: 36%;
     left: 2%;
     position: absolute;
     text-align: left;
@@ -61,11 +62,11 @@
 }
 
 .upgradeStyle3 {
-    background-color: #ffb9ef;
+    background-color: #0bac9c;
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 24%;
+    top: 44%;
     left: 2%;
     position: absolute;
     text-align: left;
