--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-family: "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardSE-Regular", sans-serif;
 }
 
 .text {
@@ -16,7 +16,7 @@
 .buttonText {
     color: white;
     position: absolute;
-    margin: 0% -5%;
+    margin: 0% 0%;
     top: 50%;
     left: 50%;
 }
@@ -40,7 +40,7 @@
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 28%;
+    top: 30%;
     left: 2%;
     position: absolute;
     text-align: left;
@@ -56,7 +56,7 @@
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 36%;
+    top: 50%;
     left: 2%;
     position: absolute;
     text-align: left;
@@ -72,7 +72,7 @@
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 44%;
+    top: 70%;
     left: 2%;
     position: absolute;
     text-align: left;
