--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 30%;
-    left: 2%;
+    top: 1%;
+    left: 1%;
     position: absolute;
     text-align: left;
     text-decoration: none;
@@ -56,8 +56,8 @@
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 50%;
-    left: 2%;
+    top: 21%;
+    left: 1%;
     position: absolute;
     text-align: left;
     text-decoration: none;
@@ -72,8 +72,8 @@
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 70%;
-    left: 2%;
+    top: 41%;
+    left: 1%;
     position: absolute;
     text-align: left;
     text-decoration: none;
@@ -117,11 +117,13 @@ body {
 /* Box styles */
 
 .upgradeBox {
+    top: 20%;
+    position: absolute;
     border: none;
     padding: 5px;
     font: 24px/36px sans-serif;
-    width: 200px;
-    height: 200px;
+    width: 500px;
+    height: 500px;
     overflow: scroll;
 }
 
