--- a/style.css
+++ b/style.css
@@ -83,6 +83,70 @@
     cursor: pointer;
 }
 
+.upgradeStyle4 {
+    background-color: #0ecdba;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    top: 61%;
+    left: 1%;
+    position: absolute;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 24px;
+    margin: 0 0;
+    cursor: pointer;
+}
+
+.upgradeStyle5 {
+    background-color: #1bedd8;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    top: 81%;
+    left: 1%;
+    position: absolute;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 24px;
+    margin: 0 0;
+    cursor: pointer;
+}
+
+.upgradeStyle6 {
+    background-color: #45fbe9;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    top: 41%;
+    left: 1%;
+    position: absolute;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 24px;
+    margin: 0 0;
+    cursor: pointer;
+}
+
+.upgradeStyle7 {
+    background-color: #50f6e5;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    top: 41%;
+    left: 1%;
+    position: absolute;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 24px;
+    margin: 0 0;
+    cursor: pointer;
+}
+
 .errorMessage {
     background-color: #ff0000;
     border: none;
