--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ body {
     font: 24px/36px sans-serif;
     width: 450px;
     height: 500px;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 
@@ -221,9 +221,9 @@ body {
 
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background: #ccc;
+    background: #22e6d2;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #999;
+    background: #27c0b0;
 }
