--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
     top: 0%;
     left: 0%;
     color: #022b3b;
-    background-color: rgb(0, 0, 0);
-    font-size: 2vw;
+    background-color: rgb(255, 255, 255);
+    font-size: 24px;
     position: absolute;
 }
 
@@ -17,10 +17,10 @@
     color: white;
     position: absolute;
     text-align: right;
-    font-size: 0.8vw;
-    margin: 0 0;
-    right: 3vw;
-    bottom: 3vw;
+    font-size: 5;
+    margin: 50px 00px;
+    right: 20px;
+    bottom: -30px;
 }
 
 .prestigePower {
@@ -28,28 +28,29 @@
     position: absolute;
     text-align: center;
     align-items: center;
-    font-size: 0.8vw;
+    transform: 180deg;
+    font-size: 15px;
     margin: 0% 0%;
-    right: 3.5vw;
-    bottom: 33vw;
+    right: -10px;
+    bottom: 0px;
     animation: txt 5s ease-out infinite normal;
 }
 
 @keyframes txt {
     0% {
-        transform: rotate(-24deg);
+        transform: rotate(-204deg);
     }
     25% {
-        transform: rotate(-31deg);
+        transform: rotate(-211deg);
     }
     50% {
-        transform: rotate(-24deg);
+        transform: rotate(-204deg);
     }
     75% {
-        transform: rotate(-31deg);
+        transform: rotate(-211deg);
     }
     100% {
-        transform: rotate(-24deg);
+        transform: rotate(-204deg);
     }
 }
 
@@ -72,7 +73,7 @@
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 1vw;
+    top: 10px;
     left: 1vw;
     position: absolute;
     text-align: left;
@@ -88,7 +89,7 @@
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 11vw;
+    top: 140px;
     left: 1vw;
     position: absolute;
     text-align: left;
@@ -104,7 +105,7 @@
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 21vw;
+    top: 270px;
     left: 1vw;
     position: absolute;
     text-align: left;
@@ -120,7 +121,7 @@
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 31vw;
+    top: 400px;
     left: 1vw;
     position: absolute;
     text-align: left;
@@ -136,7 +137,7 @@
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 41vw;
+    top: 530px;
     left: 1vw;
     position: absolute;
     text-align: left;
@@ -152,7 +153,7 @@
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 51vw;
+    top: 660px;
     left: 1vw;
     position: absolute;
     text-align: left;
@@ -168,7 +169,7 @@
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 61vw;
+    top: 790px;
     left: 1vw;
     position: absolute;
     text-align: left;
@@ -184,8 +185,8 @@
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 2vw;
-    right: 2vw;
+    bottom: 20px;
+    left: 300px;
     position: absolute;
     text-align: left;
     text-decoration: none;
@@ -205,7 +206,7 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 0.5vw;
+    font-size: 8px;
     margin: 0 0;
     cursor: pointer;
 }
@@ -214,13 +215,13 @@
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 1vw;
+    top: 15px;
     left: 50%;
     position: absolute;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 0.5vw;
+    font-size: 8px;
     margin: 0 0;
     cursor: pointer;
 }
@@ -229,13 +230,13 @@
     border: none;
     color: white;
     padding: 10px 20px;
-    top: 2vw;
+    top: 30px;
     left: 50%;
     position: absolute;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 0.5vw;
+    font-size: 8px;
     margin: 0 0;
     cursor: pointer;
 }
@@ -245,10 +246,10 @@
     align-items: center;
     justify-content: center;
     transform: rotate(180deg);
-    right: 5vw;
-    bottom: 5vw;
-    height: 30vw;
-    width: 3vw;
+    right: 50px;
+    bottom: 60px;
+    height: 70vh;
+    width: 60px;
     border-radius: 1vw;
     background-color: rgb(37, 37, 37);
 }
@@ -259,8 +260,7 @@
     justify-content: center;
     transform: rotate(180deg);
     display: inline-flex;
-    width: 3vw;
-    height: 10vw;
+    width: 60px;
     border-radius: 1vw;
     background-color: violet;
 }
@@ -283,13 +283,13 @@ body {
 /* Box styles */
 
 .upgradeBox {
-    top: 20%;
+    top: 100px;
     position: absolute;
     border: none;
     padding: 5px;
     font: 1.2vw/36px sans-serif;
-    width: 20vw;
-    height: 40vw;
+    width: 280px;
+    height: 80vh;
     overflow-y: scroll;
 }
 
