--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
     margin-left: auto;
     margin-right: auto;
     position: relative;
-    left: 6vw;
+    left: 0%;
     bottom: 0vh;
     height: 50%;
     width: 50%;
@@ -64,7 +64,7 @@
     margin-left: auto;
     margin-right: auto;
     position: relative;
-    left: 6vw;
+    left: 0%;
     bottom: 0vh;
     height: 51%;
     width: 51%;
