--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .text {
     top: 0%;
     left: 0%;
-    color: #022b3b;
+    color: #000000;
     background-color: rgb(255, 255, 255);
     font-size: 24px;
     position: absolute;
