--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ Frix63
     font-size: 1.5vh;
     margin: 0 0;
     cursor: pointer;
+    z-index: 5;
 }
 
 .CPSDisplay {
@@ -172,14 +173,7 @@ body {
 }
 
 
-/* Force scrollbars onto browser window */
-
-body {
-    margin-bottom: 200%;
-}
-
-
-/* Box styles */
+/*  Upgrade box style */
 
 .upgradeBox {
     min-width: 300px;
@@ -190,26 +184,29 @@ body {
     width: 280px;
     height: 80vh;
     overflow-y: scroll;
+    box-shadow: inset 0 0 80px black;
 }
 
 
 /* Scrollbar styles */
 
 ::-webkit-scrollbar {
-    width: 12px;
+    width: 13px;
     height: 12px;
 }
 
 ::-webkit-scrollbar-track {
-    background: #f5f5f5;
-    border-radius: 10px;
+    background: none;
+    border-radius: 0px;
 }
 
 ::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background: #22e6d2;
+    border-radius: 0px;
+    background: radial-gradient(circle, rgb(156, 156, 156) 0%, rgb(189, 189, 189) 50%, rgb(114, 114, 114) 100%);
+    box-shadow: inset 0 0 5px black;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #27c0b0;
+    background: radial-gradient(circle, rgb(132, 132, 132) 0%, rgb(165, 165, 165) 50%, rgb(90, 90, 90) 100%);
+    box-shadow: inset 0 0 5px black;
 }
