--- a/style.css
+++ b/style.css
@@ -177,11 +177,11 @@ body {
 
 .upgradeBox {
     min-width: 300px;
+    max-width: 300px;
     top: 100px;
     position: absolute;
     padding: 5px;
     font: 1.2vw/36px sans-serif;
-    width: 280px;
     height: 80vh;
     overflow-y: scroll;
     box-shadow: inset 0 0 80px black;
