--- a/upgradeStyles.css
+++ b/upgradeStyles.css
@@ -12,7 +12,7 @@ Frix63
     text-align: left;
     text-decoration: none;
     display: inline-block;
-    font-size: 1.5vh;
+    font-size: clamp(12px, 1.5vh, 19px);
     margin-bottom: 2px;
     margin-left: 7px;
     cursor: pointer;
@@ -27,7 +27,7 @@ Frix63
     text-align: left;
     text-decoration: none;
     display: inline-block;
-    font-size: 1.5vh;
+    font-size: clamp(12px, 1.5vh, 19px);
     margin-bottom: 2px;
     margin-left: 7px;
     cursor: pointer;
@@ -42,7 +42,7 @@ Frix63
     text-align: left;
     text-decoration: none;
     display: inline-block;
-    font-size: 1.5vh;
+    font-size: clamp(12px, 1.5vh, 19px);
     margin-bottom: 2px;
     margin-left: 7px;
     cursor: pointer;
@@ -57,7 +57,7 @@ Frix63
     text-align: left;
     text-decoration: none;
     display: inline-block;
-    font-size: 1.5vh;
+    font-size: clamp(12px, 1.5vh, 19px);
     margin-bottom: 2px;
     margin-left: 7px;
     cursor: pointer;
@@ -72,7 +72,7 @@ Frix63
     text-align: left;
     text-decoration: none;
     display: inline-block;
-    font-size: 1.5vh;
+    font-size: clamp(12px, 1.5vh, 19px);
     margin-bottom: 2px;
     margin-left: 7px;
     cursor: pointer;
@@ -87,7 +87,7 @@ Frix63
     text-align: left;
     text-decoration: none;
     display: inline-block;
-    font-size: 1.5vh;
+    font-size: clamp(12px, 1.5vh, 19px);
     margin-bottom: 2px;
     margin-left: 7px;
     cursor: pointer;
@@ -102,7 +102,7 @@ Frix63
     text-align: left;
     text-decoration: none;
     display: inline-block;
-    font-size: 1.5vh;
+    font-size: clamp(12px, 1.5vh, 19px);
     margin-bottom: 2px;
     margin-left: 7px;
     cursor: pointer;
