--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ Frix63
     color: white;
     padding: 10px 20px;
     bottom: 20px;
-    left: 300px;
+    left: 320px;
     position: absolute;
     text-align: left;
     text-decoration: none;
@@ -179,6 +179,8 @@ body {
     min-width: 300px;
     max-width: 300px;
     top: 100px;
+    left: 10px;
+    border: solid 1px #000000;
     position: absolute;
     padding: 5px;
     font: 1.2vw/36px sans-serif;
@@ -192,21 +194,23 @@ body {
 
 ::-webkit-scrollbar {
     width: 13px;
-    height: 12px;
 }
 
 ::-webkit-scrollbar-track {
     background: none;
     border-radius: 0px;
+    border: solid 1px #000000;
 }
 
 ::-webkit-scrollbar-thumb {
     border-radius: 0px;
     background: radial-gradient(circle, rgb(156, 156, 156) 0%, rgb(189, 189, 189) 50%, rgb(114, 114, 114) 100%);
     box-shadow: inset 0 0 5px black;
+    border: solid 1px #000000;
 }
 
 ::-webkit-scrollbar-thumb:hover {
     background: radial-gradient(circle, rgb(132, 132, 132) 0%, rgb(165, 165, 165) 50%, rgb(90, 90, 90) 100%);
     box-shadow: inset 0 0 5px black;
+    border: solid 1px #000000;
 }
