--- a/style.css
+++ b/style.css
@@ -12,13 +12,15 @@ Frix63
     -o-user-drag: none;
     margin: 0;
     padding: 0;
-    font-family: "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardSE-Regular", sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .moneyText {
     top: 0%;
     left: 0%;
     color: #000000;
+    border: solid 2px #000000;
+    box-shadow: inset 0 0 30px black, 0 0 10px 5px black;
     background-color: rgb(255, 255, 255);
     font-size: 24px;
     position: absolute;
