--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ Frix63
 
 .buttonText {
     color: white;
+    -webkit-text-stroke: 1px black;
     position: absolute;
     text-align: right;
     font-size: 5;
@@ -43,6 +44,7 @@ Frix63
 
 .prestigePower {
     color: white;
+    -webkit-text-stroke: 1px black;
     position: absolute;
     text-align: center;
     align-items: center;
@@ -103,6 +105,7 @@ Frix63
 
 .CPSDisplay {
     color: white;
+    -webkit-text-stroke: 1px black;
     padding: 10px 20px;
     top: 0%;
     left: 50%;
@@ -117,6 +120,7 @@ Frix63
 
 .AllTimeMoney {
     color: white;
+    -webkit-text-stroke: 1px black;
     padding: 10px 20px;
     top: 15px;
     left: 50%;
@@ -131,6 +135,7 @@ Frix63
 
 .RawCPS {
     color: white;
+    -webkit-text-stroke: 1px black;
     padding: 10px 20px;
     top: 30px;
     left: 50%;
