--- a/backgroundPictures.css
+++ b/backgroundPictures.css
@@ -15,14 +15,13 @@
 .SDef {
     transform-origin: center;
     display: block;
-    margin: 0vw 0vh;
+    margin: 0 0;
     margin-left: auto;
     margin-right: auto;
     position: relative;
     left: 0%;
-    bottom: 0vh;
-    height: 50%;
-    width: 50%;
+    bottom: 0;
+    transform: scale(100%);
     filter: drop-shadow(0 0 50px white);
     z-index: -1;
     pointer-events: none;
@@ -45,14 +44,13 @@
 .Anim {
     transform-origin: center;
     display: block;
-    margin: 0vw 0vh;
+    margin: 0 0;
     margin-left: auto;
     margin-right: auto;
     position: relative;
     left: 0%;
-    bottom: 0vh;
-    height: 51%;
-    width: 51%;
+    bottom: 0;
+    transform: scale(102%);
     filter: drop-shadow(0 0 50px white);
     z-index: -1;
     pointer-events: none;
