--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ Frix63
 
 @import "upgradeStyles.css";
 @import "backgroundPictures.css";
+@import "rays.css";
 * {
     -webkit-user-drag: none;
     -khtml-user-drag: none;
@@ -224,4 +225,46 @@ body {
     background: radial-gradient(circle, rgb(132, 132, 132) 0%, rgb(165, 165, 165) 50%, rgb(90, 90, 90) 100%);
     box-shadow: inset 0 0 5px black;
     border: solid 1px #000000;
+}
+
+.Rays {
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    height: 50vh;
+    width: 50vw;
+    z-index: -1;
+    opacity: .15;
+    transform: scale(20%), translateY(-50%);
+    animation: rayspin 50s linear infinite;
+}
+
+@keyframes rayspin {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+.Rays2 {
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    height: 50vh;
+    width: 50vw;
+    z-index: -1;
+    opacity: .8;
+    transform: scale(20%), translateY(-50%);
+    animation: rayspin2 50s linear infinite;
+}
+
+@keyframes rayspin2 {
+    from {
+        -webkit-transform: rotate(360deg);
+    }
+    to {
+        -webkit-transform: rotate(0deg);
+    }
 }
