--- a/backgroundPictures.css
+++ b/backgroundPictures.css
@@ -19,9 +19,10 @@
     margin-left: auto;
     margin-right: auto;
     position: relative;
+    top: -100px;
     left: 0%;
     bottom: 0;
-    transform: scale(100%);
+    transform: scale(70%);
     filter: drop-shadow(0 0 50px white);
     z-index: -1;
     pointer-events: none;
@@ -48,9 +49,10 @@
     margin-left: auto;
     margin-right: auto;
     position: relative;
+    top: -100px;
     left: 0%;
     bottom: 0;
-    transform: scale(102%);
+    transform: scale(72%);
     filter: drop-shadow(0 0 50px white);
     z-index: -1;
     pointer-events: none;
