--- a/style.css
+++ b/style.css
@@ -21,10 +21,11 @@ Frix63
     left: 0%;
     color: #000000;
     border: solid 2px #000000;
-    box-shadow: inset 0 0 30px black, 0 0 10px 5px black;
+    box-shadow: inset 0 0 30px black, 0 0 20px 3px #000000;
     background-color: rgb(255, 255, 255);
     font-size: 24px;
     position: absolute;
+    pointer-events: none;
 }
 
 .ComboText {
@@ -41,6 +42,7 @@ Frix63
     right: 20px;
     bottom: -30px;
     z-index: 1;
+    pointer-events: none;
 }
 
 .prestigePower {
@@ -105,48 +107,42 @@ Frix63
 }
 
 .CPSDisplay {
+    margin-left: 5px;
     color: white;
     -webkit-text-stroke: 1px black;
-    padding: 10px 20px;
-    top: 0%;
-    left: 50%;
+    top: 0px;
     position: absolute;
-    text-align: center;
+    text-align: left;
     text-decoration: none;
     display: inline-block;
     font-size: 8px;
-    margin: 0 0;
-    cursor: pointer;
+    pointer-events: none;
 }
 
 .AllTimeMoney {
+    margin-left: 5px;
     color: white;
     -webkit-text-stroke: 1px black;
-    padding: 10px 20px;
-    top: 15px;
-    left: 50%;
+    top: 20px;
     position: absolute;
-    text-align: center;
+    text-align: left;
     text-decoration: none;
     display: inline-block;
     font-size: 8px;
-    margin: 0 0;
-    cursor: pointer;
+    pointer-events: none;
 }
 
 .RawCPS {
+    margin-left: 5px;
     color: white;
     -webkit-text-stroke: 1px black;
-    padding: 10px 20px;
-    top: 30px;
-    left: 50%;
+    top: 40px;
     position: absolute;
-    text-align: center;
+    text-align: left;
     text-decoration: none;
     display: inline-block;
     font-size: 8px;
-    margin: 0 0;
-    cursor: pointer;
+    pointer-events: none;
 }
 
 .ATMBar {
@@ -160,21 +156,23 @@ Frix63
     width: 60px;
     color: white;
     font-size: 12px;
-    border: solid 1px #000000;
+    border: solid 1px white;
     border-radius: 1vw;
-    background-color: rgb(37, 37, 37);
+    box-shadow: 0 0 20px 3px #000000;
+    background: radial-gradient(ellipse farthest-corner at right bottom, #3e350e 0%, #2f2209 8%, #211908 30%, #231c0c 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #2e2e2e 0%, #2b2b1d 8%, #4d4224 25%, #211b0b 62.5%, #20190b 100%);
+    pointer-events: none;
 }
 
 .ATMBarProgress {
     position: absolute;
     align-items: center;
     justify-content: center;
-    border: solid 1px #000000;
+    border: solid 1px white;
     transform: rotate(180deg);
     display: inline-flex;
     width: 60px;
     border-radius: 1vw;
-    background-color: violet;
+    background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
 }
 
 html,
@@ -192,13 +190,13 @@ body {
     max-width: 300px;
     top: 140px;
     left: 10px;
-    border: solid 1px #000000;
+    border: solid 1px white;
     position: absolute;
     padding: 5px;
     font: 1.2vw/36px sans-serif;
     height: 80vh;
     overflow-y: scroll;
-    box-shadow: inset 0 0 80px black;
+    box-shadow: inset 0 0 80px black, 0 0 20px 3px #000000;
 }
 
 
@@ -218,13 +216,13 @@ body {
     border-radius: 0px;
     background: radial-gradient(circle, rgb(156, 156, 156) 0%, rgb(189, 189, 189) 50%, rgb(114, 114, 114) 100%);
     box-shadow: inset 0 0 5px black;
-    border: solid 1px #000000;
+    border: solid 1px white;
 }
 
 ::-webkit-scrollbar-thumb:hover {
     background: radial-gradient(circle, rgb(132, 132, 132) 0%, rgb(165, 165, 165) 50%, rgb(90, 90, 90) 100%);
     box-shadow: inset 0 0 5px black;
-    border: solid 1px #000000;
+    border: solid 1px white;
 }
 
 .Rays {
@@ -267,4 +265,13 @@ body {
     to {
         -webkit-transform: rotate(0deg);
     }
+}
+
+.InfoBox {
+    position: absolute;
+    right: 0%;
+    height: 100px;
+    width: 300px;
+    box-shadow: inset 0 0 80px black, 0 0 20px 3px #000000;
+    border: solid 1px white;
 }
