--- a/style.css
+++ b/style.css
@@ -145,6 +145,19 @@ Frix63
     pointer-events: none;
 }
 
+.MPSC {
+    margin-left: 5px;
+    color: white;
+    -webkit-text-stroke: 1px black;
+    top: 60px;
+    position: absolute;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 8px;
+    pointer-events: none;
+}
+
 .ATMBar {
     position: absolute;
     align-items: center;
