--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ Frix63
     margin: 0% 0%;
     right: -10px;
     bottom: 0px;
-    animation: txt 5s ease-out infinite normal;
+    animation: txt 5s ease-in-out infinite normal;
 }
 
 @keyframes txt {
