--- a/style.css
+++ b/style.css
@@ -54,9 +54,28 @@ Frix63
     transform: 180deg;
     font-size: 15px;
     margin: 0% 0%;
-    right: -10px;
-    bottom: 0px;
+    right: -20px;
+    bottom: 10px;
     animation: txt 5s ease-in-out infinite normal;
+}
+
+.PrestigeL {
+    color: white;
+    -webkit-text-stroke: 1px black;
+    position: absolute;
+    text-align: center;
+    align-items: center;
+    transform: rotate(270deg);
+    font-size: 15px;
+    margin: 0% 0%;
+    z-index: 3;
+    right: -10px;
+    bottom: 180px;
+    background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
 }
 
 @keyframes txt {
@@ -158,12 +177,25 @@ Frix63
     pointer-events: none;
 }
 
+.PStyle {
+    margin-left: 5px;
+    color: white;
+    -webkit-text-stroke: 1px black;
+    top: 80px;
+    position: absolute;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 8px;
+    pointer-events: none;
+}
+
 .ATMBar {
     position: absolute;
     align-items: center;
     justify-content: center;
     transform: rotate(180deg);
-    right: 50px;
+    right: 20px;
     bottom: 60px;
     height: 70vh;
     width: 60px;
@@ -283,7 +315,7 @@ body {
 .InfoBox {
     position: absolute;
     right: 0%;
-    height: 100px;
+    height: 150px;
     width: 300px;
     box-shadow: inset 0 0 80px black, 0 0 20px 3px #000000;
     border: solid 1px white;
