--- a/frix63/style.css
+++ b/frix63/style.css
@@ -31,7 +31,7 @@ body {
     position: relative;
     z-index: 3;
     color: #63E4F2;
-    font-size: 20px;
+    font-size: 2vw;
     padding: 28px 20px;
     float: left;
     margin: 0 20vw;
