--- a/style.css
+++ b/style.css
@@ -1,25 +1,30 @@
- body {
-     background-color: black;
- }
- 
- .buttons {
-     width: auto;
-     height: auto;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     flex-direction: column;
- }
- 
- .button {
-     margin: 5px 5px;
-     background-color: white;
-     color: black;
-     border: none;
-     height: 50px;
-     width: 500px;
-     text-align: center;
-     text-decoration: none;
-     display: inline-block;
-     font-size: 16px;
- }
+* {
+    font-family: 'Roboto', sans-serif;
+}
+
+body {
+    background-color: black;
+}
+
+.buttons {
+    filter: drop-shadow(0px 0px 10px white);
+    width: auto;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.button {
+    margin: 20px 10px;
+    background-color: white;
+    color: black;
+    border: none;
+    height: 50px;
+    width: 500px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
