--- a/frix63/style.css
+++ b/frix63/style.css
@@ -103,7 +103,7 @@
             width: 0px!important;
         }
         .topbarbox {
-            height: 40px!important;
+            height: 30px!important;
         }
     }
     
@@ -210,6 +210,10 @@
         background-color: #29A7D9;
     }
     
+    .topbarbox:target {
+        background-color: #29A7D9;
+    }
+    
     .topbarbox {
         background-color: #115D8C;
         height: 0px;
@@ -222,8 +226,8 @@
     }
     
     .topbartext {
-        padding: 0.5rem;
-        font-size: 0.6rem;
+        padding: 8px;
+        font-size: 0.4rem;
         -moz-user-select: none;
         -webkit-user-select: none;
         -ms-user-select: none;
