--- a/frix63/style.css
+++ b/frix63/style.css
@@ -210,7 +210,7 @@
         background-color: #29A7D9;
     }
     
-    .topbarbox:target {
+    .topbarbox:active {
         background-color: #29A7D9;
     }
     
@@ -226,8 +226,8 @@
     }
     
     .topbartext {
-        padding: 8px;
-        font-size: 0.4rem;
+        margin: 12px auto;
+        font-size: 7px;
         -moz-user-select: none;
         -webkit-user-select: none;
         -ms-user-select: none;
