--- a/frix63/style.css
+++ b/frix63/style.css
@@ -2,6 +2,10 @@
         font-family: 'Roboto', sans-serif;
     }
     
+    html {
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    }
+    
     body {
         background-color: #0D0D0D;
         margin: 0;
@@ -226,6 +230,7 @@
         cursor: pointer;
         transition: height 0.2s;
         overflow: hidden;
+        -webkit-tap-highlight-color: #29A7D9;
     }
     
     .topbartext {
